# TileCraft

./: .env  .gitignore  Caddyfile  Makefile  README.md  access_management.md  coverage_analysis.md  docker-compose.override.yml  docker-compose.yml  frontend_plan.md  implementation_plan.md  main.py  walkthrough.md
api/: .gitignore  Dockerfile.dev  Dockerfile.prod  Makefile  notes.md  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 06575528f92e_add_map_uniqueness_constraint.py  0ec00873a0a4_update_roles.py  145bc63ce314_initial_schema.py  1ea77b3ee1bb_add_access_policy.py  1ef4e0577b36_add_access_policy.py  40327966e609_refactor_map_atlas_relationship_to_one_.py  439827a4140f_.py  8871bb5597cc_users_roles.py  951fa8f22622_.py  fc1ddb77ce62_add_audit_columns.py
api/app/: main.py
api/app/core/: auth_dependencies.py  celery_app.py  config.py  database.py  hashing.py  logging_config.py  messages.py  mock_data.py  password_validation.py  permissions.py  rate_limit.py  repository.py  security.py  seeds.py
api/app/db/: atlases.py  maps.py  teams.py  users.py
api/app/endpoints/: atlases.py  maps.py  teams.py  users.py
api/app/locales/: en.json  fr.json
api/app/models/: atlases.py  maps.py  teams.py  user_roles.py  users.py
api/app/services/: atlases.py  auth.py  maps.py  teams.py  users.py
api/diagrams/: access_control_diagram.md  architecture_diagram.md  auth_sequence_diagram.md  exception_handling_diagram.md  service_dependencies_diagram.md
api/tests/: conftest.py  test.py
api/tests/integration/: conftest.py  pytest.txt  (+14 more)
(+101 files in other folders)
