[project]
name = "canopy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "authlib>=1.6.6",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.128.0",
    "itsdangerous>=2.2.0",
    "psycopg[binary]>=3.3.2",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.31",
    "aiosmtplib>=3.0.0",
    "slowapi>=0.1.9",
    "celery[redis]>=5.4.0",
    "shapely>=2.0.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "testcontainers>=4.14.0",
]
